--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>成都高新减灾研究所</title>
+    <title>-</title>
   </head>
   <body>
     <div id="root"></div>
